<resources>
    <string name="app_name">Wodule</string>
    <string name="Secured">Secured connection</string>
    <string name="Please">Please sign in:</string>
    <string name="Register">Register / New User</string>
    <string name="Forgot">Forgot your password?</string>
    <string name="License">License Agreement</string>
    <string name="hintUsername">Username</string>
    <string name="hintPassword">Password</string>
    <string name="Submit">Submit</string>
    <string name="LICENSE">LICENSE AGREEMENT</string>
    <string name="textLICENSE">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\nLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="NEW">NEW USER</string>
    <string name="Profile">Profile</string>
    <string name="hintFirst">First name</string>
    <string name="hintMiddle">Middle name</string>
    <string name="hintLast">Last name</string>
    <string name="hintNative">Native name</string>
    <string name="hintSuffix">Suffix</string>
    <string name="Display">Display last name first name</string>
    <string name="Date">Date of birth</string>
    <string name="Country">Country of birth</string>
    <string name="hintResidence">Residence Address</string>
    <string name="hintCity">City</string>
    <string name="hintCountry">Country</string>
    <string name="hintTelephone">Telephone</string>
    <string name="hintEmail">Email</string>
    <string name="hintNationality">Nationality</string>
    <string name="hintEthnility">Ethnility</string>
    <string name="hintStatus">Status</string>
    <string name="hintReligion">Religion</string>
    <string name="hintGender">Gender</string>
    <string name="hintCode">Code</string>
    <string name="hintSchool">School/Organisation</string>
    <string name="hintClass">Class</string>
    <string name="hintAdviser">Adviser/Parent</string>
    <string name="SUBMIT">SUBMIT</string>
    <string name="RESET">RESET</string>
    <string name="check_login_fb">We couldn\'t connect your Facebook account. Please try later or check you Facebook account.</string>
    <string name="check_fname">First name is invalid</string>
    <string name="check_mname">Middle name is invalid</string>
    <string name="check_lname">Last name is invalid</string>
    <string name="check_nativename">Native name is invalid</string>
    <string name="check_password">Password is invalid</string>
    <string name="check_dateofbirth">Date of birth is invalid</string>
    <string name="check_country_of_birth">Country of birth is invalid</string>
    <string name="check_city">City is invalid</string>
    <string name="check_country">Country is invalid</string>
    <string name="check_telephone">Phone number is invalid</string>
    <string name="check_nationality">Nationality is invalid</string>
    <string name="check_status">Status is invalid</string>
    <string name="check_gender">Gender is invalid</string>
    <string name="check_code">Code is invalid</string>
    <string name="check_username">User name is invalid</string>
    <string name="check_email">Email is invalid</string>
    <string name="check_suffx">Suffx is invalid</string>
    <string name="check_infirst">Infirst is invalid</string>
    <string name="check_address">Address is invalid</string>
    <string name="check_ethnicity">Ethnicity is invalid</string>
    <string name="check_religion">Religion is invalid</string>
    <string name="check_Picture">Picture is invalid</string>
    <string name="check_school">School is invalid</string>
    <string name="check_class">Class is invalid</string>
    <string name="check_advise">Adviser is invalid</string>
    <string name="check_network">Network is disconnect.</string>
    <string name="ASSESSMENT">ASSESSMENT HISTORY</string>
    <string name="DATE">DATE</string>
    <string name="USERID">USER-ID</string>
    <string name="SCORE">SCORE</string>
    <string name="No">No results</string>
    <string name="CALENDAR">CALENDAR OF ASESSMENT</string>
    <string name="RELATED">RELATED EVENTS:</string>
    <string name="MidTerm">MidTerm Exam</string>
    <string name="Final">Final Exam      </string>
    <string name="log">log out</string>
    <string name="Examinee">Examinee ID:</string>
    <string name="Sex">Sex: N/A</string>
    <string name="Age">Age: N/A</string>
    <string name="START">START ASSESSMENT</string>
    <string name="ACCOUNTING">ACCOUNTING</string>
    <string name="INSTRUCTION">INSTRUCTION / GUIDES</string>
    <string name="PART1">PART 1</string>
    <string name="Reading">Reading Aloud</string>
    <string name="Talk">Talk about this Picture</string>
    <string name="Describe">Describe Picture</string>
    <string name="PART2">PART2</string>
    <string name="PART3">PART3</string>
    <string name="Interview">Interview Questions</string>
    <string name="What">What is your hobby?</string>
    <string name="Whatis">What is your favourite book?</string>
    <string name="PART4">PART4</string>
    <string name="END">END</string>
    <string name="Thank">Thank you!</string>
    <string name="Your">Your grade will be available soon.</string>
    <string name="TAKE">TAKE ANOTHER ASSESSMENT</string>
    <string name="CATEGORY">CATEGORY</string>
    <string-array name="score_arrs">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
        <item>81</item>
        <item>82</item>
        <item>83</item>
        <item>84</item>
        <item>85</item>
        <item>86</item>
        <item>87</item>
        <item>88</item>
        <item>89</item>
        <item>90</item>
        <item>91</item>
        <item>92</item>
        <item>93</item>
        <item>94</item>
        <item>95</item>
        <item>96</item>
        <item>97</item>
        <item>98</item>
        <item>99</item>
        <item>100</item>
    </string-array>
    <string name="facebook_app_id">324526487985081</string>
    <string name="fb_login_protocol_scheme">fb324526487985081</string>
</resources>