<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_top_login"
    tools:context=".activity.ActLogin">
    <LinearLayout
        android:gravity="center"
        android:layout_weight="1.7"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_top_login"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img_logosmall"
            android:src="@mipmap/ic_logo_small"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_userpasswork">
        <LinearLayout
            android:id="@+id/ll_group_center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_rect_layout"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <TextView
                android:text="@string/Secured"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_white"
                android:textSize="@dimen/text14"
                android:drawableLeft="@mipmap/ic_lock"
                android:drawablePadding="@dimen/margin5"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin5"
                android:layout_marginBottom="@dimen/margin5"
                android:layout_marginRight="@dimen/margin15"
                android:id="@+id/textView2" />
            <TextView
                android:text="@string/Please"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/color_white"
                android:textSize="@dimen/text18"
                android:layout_marginTop="@dimen/margin5"
                android:layout_marginBottom="@dimen/margin5"
                android:layout_marginRight="@dimen/margin25"
                android:id="@+id/lbSignin" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:hint="@string/hintUsername"
                android:id="@+id/edUserName"
                android:textSize="@dimen/text16"
                android:textColor="@color/color_text_green"
                android:textColorHint="@color/color_hint_text"
                android:paddingLeft="@dimen/margin15"
                android:paddingRight="@dimen/margin15"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:maxLines="1"
                android:layout_marginTop="@dimen/margin5"
                android:layout_marginLeft="@dimen/margin20"
                android:layout_marginRight="@dimen/margin20"
                android:background="@drawable/border_rect_button"/>

            <EditText
                android:imeOptions="actionDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:hint="@string/hintPassword"
                android:id="@+id/edPassword"
                android:textSize="@dimen/text16"
                android:textColor="@color/color_text_green"
                android:textColorHint="@color/color_hint_text"
                android:paddingLeft="@dimen/margin15"
                android:paddingRight="@dimen/margin15"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:maxLines="1"
                android:layout_marginLeft="@dimen/margin20"
                android:layout_marginRight="@dimen/margin20"
                android:layout_marginTop="@dimen/margin10"
                android:background="@drawable/border_rect_button"/>



            <Button
                android:text="@string/Submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_text_green"
                android:textSize="@dimen/text16"
                android:gravity="center"
                android:paddingLeft="@dimen/margin20"
                android:paddingRight="@dimen/margin20"
                android:background="@drawable/border_rect_button"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin10"
                android:id="@+id/btnSubmit" />

            <TextView
                android:text=" - - - - - - - - - - - - - - - - - - - - - - - - - - "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/color_white"
                android:padding="@dimen/margin5"
                android:layout_marginTop="@dimen/margin5"
                android:id="@+id/textView3" />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin5">
            <ImageView
                android:id="@+id/iconInstagram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/btn_ig"
                android:layout_centerInParent="true"/>
            <ImageView
                android:id="@+id/iconFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/btn_fb"
                android:layout_marginRight="@dimen/margin10"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/iconInstagram"/>
            <ImageView
                android:id="@+id/iconGPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/btn_gplus"
                android:layout_marginLeft="@dimen/margin10"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/iconInstagram"
                android:visibility="visible"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1.7"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/color_top_login">
        <TextView
            android:text="@string/Register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text14"
            android:drawableLeft="@mipmap/ic_arrow"
            android:drawablePadding="@dimen/margin5"
            android:layout_gravity="left"
            android:layout_margin="@dimen/margin5"
            android:id="@+id/tvRegister" />
        <TextView
            android:text="@string/Forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text14"
            android:drawableLeft="@mipmap/ic_arrow"
            android:drawablePadding="@dimen/margin5"
            android:layout_gravity="left"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginBottom="@dimen/margin10"
            android:layout_marginLeft="@dimen/margin5"
            android:id="@+id/tvForgotPass" />
        <TextView
            android:text="@string/License"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text14"
            android:drawableLeft="@mipmap/ic_arrow"
            android:drawablePadding="@dimen/margin5"
            android:layout_gravity="left"
            android:layout_margin="@dimen/margin5"
            android:id="@+id/tvLicense" />

    </LinearLayout>


</LinearLayout>
