<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/ll_group_bottom"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">
        <TextView
            android:text="@string/TAKE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnNextExam"
            android:textSize="@dimen/text16"
            android:textColor="@color/color_white"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/margin15"
            android:paddingRight="@dimen/margin15"
            android:layout_marginTop="@dimen/margin15"
            android:layout_marginBottom="@dimen/margin15"
            android:background="@drawable/border_rect_green_dark"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/boder_bg_content"
        android:layout_above="@+id/ll_group_bottom"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/END"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text14"
            android:drawableLeft="@mipmap/ic_newuser"
            android:padding="@dimen/margin10"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/margin5"
            android:layout_marginLeft="@dimen/margin5"
            android:layout_gravity="center_horizontal"
            android:id="@+id/lbTitle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/border_rect_layout">
            <TextView
                android:text="@string/Thank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lbHeader"
                android:textColor="@color/color_black"
                android:textSize="@dimen/text18"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin15"/>
            <TextView
                android:text="@string/Your"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lbQuestion"
                android:textColor="@color/color_black"
                android:textSize="@dimen/text18"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin25"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ivAvatar"
                android:scaleType="centerInside"
                android:layout_gravity="center"
                android:src="@mipmap/ic_home"
                android:layout_marginTop="@dimen/margin40"/>

            <TextView
                android:text="HOME"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnHome"
                android:textSize="@dimen/text16"
                android:textColor="@color/color_white"
                android:layout_gravity="center"
                android:paddingLeft="@dimen/margin15"
                android:paddingRight="@dimen/margin15"
                android:layout_marginTop="@dimen/margin20"
                android:layout_marginBottom="@dimen/margin15"
                android:background="@drawable/border_rect_green_dark"/>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
