<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context=".activity.ActAssessmentHistoryE">
    <ImageView
        android:id="@+id/iconLogoTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@mipmap/ic_logo_small"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/margin15"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iconLogoTop"
        android:layout_above="@+id/ll_group_bottom"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/boder_bg_content">
        <TextView
            android:text="@string/ASSESSMENT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text14"
            android:drawableLeft="@mipmap/ic_newuser"
            android:padding="@dimen/margin5"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/margin5"
            android:layout_marginLeft="@dimen/margin10"
            android:layout_marginTop="@dimen/margin5"
            android:layout_marginBottom="@dimen/margin5"
            android:layout_gravity="center_horizontal"
            android:id="@+id/lbTitle" />
        <LinearLayout
            android:id="@+id/ll_group_center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_rect_layout"
            >
            <RelativeLayout
                android:id="@+id/rl_group_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin5"
                android:layout_marginBottom="@dimen/margin5"
                android:background="@color/color_layout_rect">

                <TextView
                    android:text="@string/DATE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/header_date"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/margin10"
                    android:paddingRight="@dimen/margin10"
                    android:textSize="@dimen/text16"
                    android:gravity="center"
                    android:textColor="@color/color_white"
                    android:layout_marginLeft="@dimen/margin5"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:text="@string/USERID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/header_examId"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="@dimen/text16"
                    android:textColor="@color/color_white"
                    android:layout_marginLeft="@dimen/margin5"
                    android:layout_toLeftOf="@+id/header_score"
                    android:layout_toRightOf="@+id/header_date"/>

                <TextView
                    android:text="@string/SCORE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/header_score"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingLeft="@dimen/margin10"
                    android:paddingRight="@dimen/margin10"
                    android:textSize="@dimen/text16"
                    android:textColor="@color/color_white"
                    android:layout_marginLeft="@dimen/margin5"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/No"
                android:layout_marginTop="@dimen/margin15"
                android:padding="@dimen/margin10"
                android:textSize="@dimen/text16"
                android:textColor="@color/color_white"
                android:id="@+id/lbNoresult"
                android:layout_gravity="center_horizontal" />

            <ListView
                android:visibility="gone"
                android:id="@+id/list_history"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@android:color/transparent" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_group_bottom"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/ivBack"
                android:src="@mipmap/btn_back"
                android:layout_marginLeft="@dimen/margin20"
                android:layout_marginBottom="@dimen/margin5"
                android:layout_marginTop="@dimen/margin5"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:text="AGREE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lbAgree"
                android:textSize="@dimen/text16"
                android:textColor="@color/color_white"
                android:layout_gravity="center"
                android:paddingLeft="@dimen/margin10"
                android:paddingRight="@dimen/margin10"
                android:layout_marginTop="@dimen/margin15"
                android:layout_marginBottom="@dimen/margin15"
                android:background="@drawable/border_rect_green_dark"
                android:visibility="invisible"/>
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>
